Fix for using long content with an icon wrapping incorrectly.
git-svn-id: http://code.extjs.com/svn/ext/trunk@3064 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/structure/dialog.css
+++ b/resources/css/structure/dialog.css
@@ -43,6 +43,10 @@
     width:44px; /* 3px IE margin issue */
 }
 
+.x-window-dlg .x-dlg-icon .ext-mb-content{
+    zoom: 1; margin-left: 47px;
+}
+
 .x-window-dlg .ext-mb-info, .x-window-dlg .ext-mb-warning, .x-window-dlg .ext-mb-question, .x-window-dlg .ext-mb-error {
     background:transparent no-repeat top left;
 }
